--- a/Internet-and-Data-Centers.tex
+++ b/Internet-and-Data-Centers.tex
@@ -1309,7 +1309,9 @@ BGP è dimostrato che non è stabile, esistono configurazioni per cui la best os
 
 \clearpage
 
-\section{Trasmissioni Efficienti TCP}
+\section{TCP}
+
+\section{Trasmissioni Efficienti}
 
 La socket è vista dall'applicazione come un file descriptor, una sequenza di 16 bit, associato ad un'istanza di conversazione. 
 Quando si vuole mandare un messaggio ad una macchina remota, l'applicazione scrive il messaggio su una di queste socket, con gli stessi comandi per la scrittura su di un file. 
@@ -1340,6 +1342,87 @@ Il TCP mittente può aspettare che i dati si accumulino prima di inviarli, ad ec
 
 Si può utilizzare il campo window per comunicare il buffer disponibile in lettura o scrittura. In questo modo avendo un mittente veloce ed un destinatario lento, questo metodo blocca il traffico. 
 Può essere utilizzato in maniera strategica, quando un server instaura una connessione, mostra prima una finestra piccola, per evitare possibili attacchi. 
+
+
+%% TODO smt
+
+Leggendo il carattere il server telnet invia un notifica di cambiamento di flusso, inviando 40 byte per pacchetto, con un solo byte significativo passato sulla rete. 
+
+
+Per ovviare a questo problema si utilizzano riscontri ritardati, di solito le notifiche di variazione dei controlli di flusso e gli ack sono ritardati di qualche centinaio di millisecondi. 
+
+L'algoritmo di Nagle ha lo scopo di ridurre il numero di pacchetti che viaggiano al produttore al consumatore del flusso. 
+Questo algoritmo invia il primo troncone di dati ed i successivi si lasciano accumulare nel buffer. Il segment successivo è inviato slo se il precedente è stato riscontrato, oppure se è stat raggiunta la dimensione di spedizione massima per la spedizione di un segment nella coda. 
+Questo algoritmo è molto usato, ma disabilitato in applicazioni fortemente interattive, potrebbe infatti provocare movimenti incontrollabili del cursore. 
+
+Il problema simmetrico consiste in un'applicazione mittente che produce molti dati. L'applicazione ricevente li usa un byte alla volta. Il problema è il buffer di ingresso del ricevente pieno, con la corrispondente finestra di controllo di flusso pari a zero. Leggendo un byte alla volta, invia una notifica ogni volta che un byte si libera, ed il mittente invia un singolo byte. 
+
+L'algoritmo di Clark risolve questo problema a lato server. Se a lato server bisogna notificare la modifica della finestra, si invia solo se la finestra raggiunge la metà dell'ampiezza massima, oppure un MSS. 
+
+\subsection{Controllo di Congestione}
+
+
+Durante una connessione la porzione di banda fornite a TCP può variare, è dinamica, e deve determinare quanti pacchetti può inviare sulla banda. Avendo un meccanismo di riscontro caratterizzato da un timeout, un ritardo notevole nell'identificazione di pacchetti mancanti. 
+
+Quando un router è congestionato è costretto a scartare dei pacchetti se non può gestirli, prendendoli casualmente dalla coda di pacchetti. 
+
+
+% TCP aiuta al controllo della congestione di rete
+
+TCP usa una seconda finestra scorrevole per il controllo di congestione, con una limitazione arbitraria definita dal router. Questa finestra non viene condivisa nel pacchetto TCP, ma è unica per una entità TCP. Quando rileva che la rete è congestionata diminuisce la sua finestra di congestione. 
+La finestra che viene usata per spedire dati è la più piccola tra le due. 
+
+
+Può essere espressa in numero di segment, quando un pacchetto viene riscontrato, aumenta il valore della finestra, diminuita quando ne invia uno. 
+
+
+L'algoritmo di \textit{slow start} inizializza le finestre di congestione alla dimensione del più grande segment utilizzabile. Ogni ack prima del timeout aumenta la finestra di un MSS, anche se il pacchetto non conteneva tutti i byte di un MSS. Se un segment viene perso, ritorna al valore iniziale. 
+Se la trasmissione procede senza perdite, il numero di segment cresce esponenzialmente nel tempo, proporzionale al throughput, fino al limite della connessione. 
+
+Prima dello slow start le macchine mandavano pacchetti fino all'esaurimento della finestra di controllo. Prima si usava slow start solo sulle reti geografiche. Non è ottimale, poiché riparte da un singolo pacchetto alla volta. 
+
+L'obiettivo è stimare nel più breve tempo possibile la banda effettivamente disponibile, quindi si unisce ad un ulteriore parametro \texttt{ssthresh}, un valore inizialmente scelto supponendo sia ottimale. 
+Quando un segment è riscontrato ed aumenta il \texttt{cwnd}, la finestra di controllo di congestion, cresce e se è minore della soglia scelta aumenta di uno, mentre se è maggiore della soglia aumenta di un valore del quadrato di un MSS, diviso per il valore attuale della finestra, per evitare congestioni. 
+Se si rileva una congestione la soglia è portata alla metà del minimo tra la finestra di controllo di flusso e di congestione. E si porta \texttt{cwnd} ad un MSS. Questa crescita porta a stabilizzarsi in condizioni ottimali ad un intorno del valore ottimale. 
+
+
+Supponendo di essere nello stato di congestion avoidance e che la finestra valga \texttt{cwnd}. Si possono spedire tutti i pacchetti determinati dalla finestra di congestione. Supponendo che siano tutti riconosciuti, la finestra cresce globalmente di:
+\begin{gather*}
+    \frac{\text{cwnd}}{\text{mss}}\frac{\text{mss}^2}{\text{cwnd}}=\text{mss}
+\end{gather*}
+Quindi si ha una crescita costante lineare, anche se non propriamente è lineare poiché ogni pacchetto successivo ha una \text{cwnd} diversa. 
+Il comportamento è esponenziale per il slow start fino a raggiungere il congestion avoidance dove è lineare. 
+
+
+
+È molto più difficile stimare il tempo di timeout
+%% TODO smt
+Il roundtrip time stimato per una connessione è la stima corrente, calcolato secondo l'algoritmo di Jackson. 
+Se si realizza una media bisogna tenere in considerazione gli ultimi dati, dandogli un peso maggiore. 
+
+Si vorrebbe scegliere un timeout pari al \textit{round trip time}. Nelle prime implementazioni una volta calcolato il rtt, si considerava il timeout un valore $\beta\times$rtt. Ma questo non è efficacie poiché $\beta$ non può essere costante dovrebbe dipendere dalla deviazione standard della distribuzione dei tempi di ack. 
+Varie implementazioni di TCP usano un timeout pari a rtt$+4D$. Dove $D$ è detta deviazione media, una stima velocemente calcolabile della deviazione standard:
+\begin{gather*}
+    D=\alpha D+(\-\alpha)|\text{rtt}-M|
+\end{gather*}
+
+
+Quando un segment è ritrasmesso non è chiaro a quale istanza di trasmissione si riferisce il suo ack. Questo influenza il rtt. Quando si ha un fallimento di invio, a quello specifico segment si applica un timeout raddoppiato ogni volta che non riesce a passare, questa è una variante facile da implementare per l'algoritmo di Karn. 
+
+
+Quando arriva un segmento fuori sequenza viene generato immediatamente un ack, duplicato, questo non arriva mai in ritardo. Quando arriva un segment fuori sequenza potrebbe provocare l'invio di un ack duplicato. 
+Il riscontro è cumulativo, quindi non si deve riscontrare, ma genera automaticamente il riscontro ripetuto sull'ultimo ack fornito. 
+Questo è un pacchetto in più, questo determina che il mittente riceve un ack duplicato capisce di aver ricevuto una perdita al terzo ack ripetuto, quindi il quarto ack con lo stesso numero di sequenza. Quindi si capisce di aver perso un solo pacchetto. Non ha il tempo di un timeout, ma di un roundtrip, nel caso peggiore. Poiché si ha una pipe di pacchetti, notificando il mittente in modo immediato. 
+
+Una volta individuato questo, il mittente effettua due operazioni. Il \textit{fast retransmit} ed il \textit{fast recovery}. Per il primo, quando rileva una perdita ritrasmette subito il pacchetto che si suppone sia perso, senza attendere che scada il timeout, il ricevente invierà un ack cumulativo per l'intera sequenza. 
+L'algoritmo di fast recovery non si porta al minimo \texttt{cwnd}, ma si esegue un congestion avoidance, poiché si suppone si sia perso un solo segment e quindi è troppo drastico far ripartire lo slow start. 
+Questi due algoritmi vengono implementati insieme. 
+
+
+Se la connessione è stabile si impiega metà della banda effettiva, in un andamento a dente di sega, aumentando linearmente fino a quando non si raggiunge il doppio della soglia e ritornando giù, utilizzando quindi tre quarti della banda disponibile. Generalmente è tre, ma non sempre poiché dipende dalla crescita lineare dell'uso della banda. L'intuizione è usare ack duplicati per percepire le perdite. 
+%% TODO spiegare meglio andamento a dente di sega
+
+
 
 \clearpage
 
